<resources>
    <string name="app_name">Armchair StormChaser</string>
    <string name="passwordTextLabel">Password: </string>
    <string name="usernameTextLabel">Username: </string>
    <string name="textView_ScoreLabel">Score: </string>
    <string name="dailyScoreLabel">Daily Score: </string>
    <string name="totalScoreLabel">Total Score: </string>
    <string name="textView_Time_Label">Estimated Time Left: </string>
    <string name="loginButtonLabel">Login</string>
    <string name="logoutButtonLabel">Logout</string>
    <string name="goBackButtonLabel">Go Back</string>
    <string name="createUserButtonLabel">Create User</string>
    <string name="button_StopTravel">Stop Travel</string>
    <string name="beginNewDayStartNewButton">Select New Start</string>
    <string name="beginNewDayContinueButton">Continue</string>
    <string name="beginNewDayButton">Begin New Day</string>
    <string name="howToPlayReturnButtonLabel">Return to Game</string>
    <string name="howToPlayButtonLabel">How to Play</string>
    <string name="endOfDayLabel">End of Day</string>
    <string name="usernameHint">username</string>
    <string name="passwordHint">password</string>
    <string name="textView_Score">_</string>
    <string name="textView_Time">_</string>
    <string name="dailyScore">_</string>
    <string name="totalScore">_</string>
    <string name="logo">Logo</string>
    <string name="background">background</string>
    <string name="selectNewRouteLabel">Please select a new route</string>
    <string name="selectStartingLocationLabel">Please select a starting location</string>
    <string name="areYouSureLabel">Are you sure?</string>
    <string name="yesButton">Yes</string>
    <string name="noButton">No</string>
    <string name="HowToPlay_SelectRoute">To select a route simply press any location on the map to start moving there.</string>
    <string name="HowToPlay_SelectStart">To start, simply press any location on the map where you wish to begin.</string>
    <string name="HowToPlay_StormValuesPolygons">Polygons: A red polygon is a tornado warning, a yellow polygon is a tornado watch, A green polygon is a thunderstorm warning, and a blue polygon means that there is a thunderstorm watch. You need to be inside them to get points</string>
    <string name="HowToPlay_StormValuesDots">Dots: Green dots represent Wind Reports, the Blue dots represent Hail Reports, and the Red dots represent Tornado Reports. You need to be nearby them to get points.</string>
    <string name="HowToPlay_Score">The score for the current day is displayed on the upper right corner of the screen.</string>
    <string name="HowToPlay_TimeLeft">The time remaining for the current route is displayed on the upper right side of the screen.</string>
    <string name="HowToPlay_StopTravel">To choose a new route, you need to click the stop travel button.</string>
</resources>
