<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/background_imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/mapbox_color_text_cursor" />

    <ImageView
        android:id="@+id/logo_imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="62dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/asc_logo_large" />

    <TextView
        android:id="@+id/createUser_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="373dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="7dp"
        android:text="@string/createUserButtonLabel"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="9dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createUser_textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="94dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="541dp">

            <TextView
                android:id="@+id/createUsername_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usernameTextLabel"
                tools:layout_editor_absoluteX="93dp"
                tools:layout_editor_absoluteY="545dp" />

            <EditText
                android:id="@+id/userName_text_input"
                android:layout_width="186dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                tools:layout_editor_absoluteX="178dp"
                tools:layout_editor_absoluteY="530dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="385dp"
            android:layout_height="113dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="636dp">

            <TextView
                android:id="@+id/createPassword_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passwordTextLabel"
                tools:layout_editor_absoluteX="93dp"
                tools:layout_editor_absoluteY="606dp" />

            <EditText
                android:id="@+id/password_text_input"
                android:layout_width="186dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                tools:layout_editor_absoluteX="178dp"
                tools:layout_editor_absoluteY="595dp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/createUser_button"
        android:layout_width="118dp"
        android:layout_height="71dp"
        android:layout_marginBottom="16dp"
        android:onClick="login"
        android:text="@string/createUserButtonLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/yesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="373dp"
        android:onClick="switchToMainScreen"
        android:text="@string/goBackButtonLabel"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/background_imageView"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>